--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
