--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.profiles.active=${ACTIVE_PROFILES:dev,h2}
 server.port=8080
 
+spring.servlet.multipart.max-file-size=16MB
+spring.servlet.multipart.max-request-size=16MB
 spring.application.name=${APP_NAME:Contact Application}
 
 # spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 
 springdoc.api-docs.enabled=true
 
-todoapp.server=${APP_URL:http://localhost:8080}
+contactapp.server=${APP_URL:http://localhost:8080}
 
 
 spring.jpa.open-in-view = true
