new error handler with controller advice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.application.name=${APP_NAME:Contact Application}
 springdoc.api-docs.enabled=true
 
 contactapp.server=${APP_URL:http://localhost:8080}
-
+contactapp.http.cache.time-to-live-in-days=1461;
 
 spring.jpa.open-in-view = true
