refactor the models with constructors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ springdoc.api-docs.enabled=true
 contactapp.server=${APP_URL:http://localhost:8080}
 contactapp.http.cache.time-to-live-in-days=1461;
 
-spring.jpa.open-in-view = true
+spring.jpa.open-in-view = false
