add contact relation end point

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.version=@springdoc.version@
 
 springdoc.api-docs.enabled=true
+#For sorting endpoints alphabetically
+springdoc.swagger-ui.operationsSorter=alpha
+#For sorting tags alphabetically
+springdoc.swagger-ui.tagsSorter=alpha
+
+springdoc.swagger-ui.doc-expansion= none
