--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<artifactId>problem-spring-web</artifactId>
 			<version>0.26.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
