refactor for mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ springdoc.api-docs.enabled=true
 
 contactapp.server=${APP_URL:http://localhost:8080}
 contactapp.http.cache.time-to-live-in-days=1461;
+contactapp.data-password=${APP_DATA_PASSWORD:password}
 
 spring.jpa.open-in-view = false
